packages/engine/src/tests/snapshots/engine__tests__partition__broken_math_call_underscore_diagnostics.snap
---
source: packages/engine/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 46,
      "end": 47
    },
    "severity": "error",
    "message": "unexpected underscore",
    "hints": []
  }
]
