packages/engine/src/tests/snapshots/engine__tests__partition__broken_mixed_errors_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      30
    ],
    "items": 10,
    "width": 126.11,
    "height": 103.1,
    "x": -43.15,
    "y": -0.64
  },
  {
    "range": [
      32,
      57
    ],
    "items": 6,
    "width": 54.59,
    "height": 40.0,
    "x": -27.19,
    "y": 121.02
  },
  {
    "range": [
      59,
      66
    ],
    "items": 6,
    "width": 27.29,
    "height": 37.64,
    "x": 0.0,
    "y": 180.22
  }
]
