packages/engine/src/tests/snapshots/engine__tests__partition__broken_unclosed_after_heading_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      9
    ],
    "items": 4,
    "width": 133.31,
    "height": 44.8,
    "x": 0.0,
    "y": -1.28
  },
  {
    "range": [
      11,
      18
    ],
    "items": 6,
    "width": 27.29,
    "height": 37.64,
    "x": 0.0,
    "y": 61.44
  },
  {
    "range": [
      20,
      25
    ],
    "items": 2,
    "width": 44.56,
    "height": 22.4,
    "x": 0.0,
    "y": 117.44
  }
]
