packages/engine/src/tests/snapshots/engine__tests__partition__broken_unclosed_before_list_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 6,
    "width": 27.29,
    "height": 37.64,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      9,
      19
    ],
    "items": 7,
    "width": 74.08,
    "height": 22.4,
    "x": 18.96,
    "y": 56.0
  },
  {
    "range": [
      20,
      30
    ],
    "items": 11,
    "width": 74.24,
    "height": 22.4,
    "x": 18.96,
    "y": 78.4
  }
]
