packages/engine/src/tests/snapshots/engine__tests__partition__broken_unclosed_dollar_diagnostics.snap
---
source: packages/engine/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 16,
      "end": 17
    },
    "severity": "warning",
    "message": "unclosed math equation; inserted a closing `$`",
    "hints": []
  }
]
